--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "10.4.15",
+    "autoprefixer": "^10.4.15",
+    "bcrypt": "^5.1.1",
+    "mongodb": "^5.8.1",
+    "mongoose": "^7.4.5",
     "next": "13.4.19",
-    "postcss": "8.4.28",
+    "next-auth": "^4.23.1",
+    "postcss": "^8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "^3.3.3"
   }
 }
